[tool.poetry]
name = "fastapi-graphql-userinfo"
version = "0.1.0"
description = ""
authors = ["Alexios Karadimos <karadalex@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.1"
graphene-sqlalchemy = "^2.3.0"
uvicorn = "^0.21.1"
psycopg2-binary = "^2.9.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
