[tool.poetry]
name = "quantum-examples"
version = "0.1.0"
description = ""
authors = ["Alexios Karadimos <karadalex@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
qiskit = "^0.42.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
