[tool.poetry]
name = "vrep-gym-env-rl"
version = "0.1.0"
description = ""
authors = ["Alexios Karadimos <karadalex@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gym = "^0.26.2"
numpy = "^1.24.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
